<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.allah.corpsideal.Main_Connexion"
    android:orientation="vertical"
    android:background="@drawable/interface_cnx">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pseudo_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <EditText

            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pseudo_cnx"
            android:hint="@string/edittxt_login"
            android:gravity="center"
            android:foregroundGravity="left|center_vertical" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pass_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">
        <EditText
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass_cnx"
            android:hint="@string/edittxt_pass"
            android:gravity="center"
            android:foregroundGravity="left|center_vertical"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/btn_cnx"
        android:id="@+id/btn_cnx"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#FFF675"
        android:shadowRadius="10"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onButtonClick"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_sevenir"
        android:id="@+id/checkBox"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#db8540"
        android:layout_marginLeft="8dp" />


</LinearLayout>
