<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.allah.corpsideal.Main_caraterestiques_corporelle"
    android:orientation="vertical"
    android:background="@drawable/interface_backgound">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poids"
                android:id="@+id/textView3"
                android:textColor="#000000"
                android:layout_marginBottom="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taille"
                android:id="@+id/textView2"
                android:textColor="#040404"
                android:layout_marginBottom="35dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:id="@+id/textView"
                android:textColor="#080707" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@drawable/editshape"
                android:id="@+id/edtpoid"
                android:gravity="center_horizontal"
                android:layout_marginBottom="8dp" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/edttaille"
                android:gravity="center_horizontal"
                android:background="@drawable/editshape"
                android:layout_marginBottom="8dp" />

            <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtage"
                android:gravity="center_horizontal"
                android:background="@drawable/editshape"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="en Kg"
                android:id="@+id/textView5"
                android:textColor="#000000"
                android:layout_marginBottom="40dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="en métre"
                android:id="@+id/textView7"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:id="@+id/group"
        android:layout_marginTop="20dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homme"
            android:id="@+id/rh"
            android:textColor="#000000" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femme"
            android:id="@+id/rf"
            android:textColor="#000000"
            android:checked="true" />
    </RadioGroup>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:background="@drawable/trait" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/rslt"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        android:textColor="#040303"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:weightSum="1"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IMC"
            android:id="@+id/resimc"
            android:textColor="#000000" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonImc"
            android:background="@drawable/icon_interrogation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IMg"
            android:id="@+id/imgres"
            android:textColor="#000000"
            android:layout_marginLeft="20dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButtonImg"
            android:background="@drawable/icon_interrogation" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginLeft="8dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="Enregistrer"
                android:id="@+id/btnEnrgRes"
                android:background="@drawable/buttonshape"
                android:textColor="#ffffff"
                android:layout_marginBottom="8dp" />


            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="Suivre mes résultats"
                android:id="@+id/btnSuivreRes"
                android:background="@drawable/buttonshape"
                android:textColor="#ffffff" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:background="@drawable/trait" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textInterp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />


        </LinearLayout>



    </ScrollView>

</LinearLayout>
